[tool.poetry]
name = "docker-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "docker_env"}]

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[tool.poetry.dependencies]
python = "^3.9"
black = {extras = ["jupyter"], version = "^23.3.0"}
jax = {extras = ["cuda12-pip"], version = "^0.4.8"}
numpyro = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
