[tool.poetry]
name = "docker-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "docker_env"}]

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[tool.poetry.dependencies]
python = "^3.9"
numpyro = "^0.12.1"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
ipykernel = "^6.24.0"
ipywidgets = "^8.0.7"
seaborn = "^0.12.2"
transformers = "^4.31.0"
dvc = {extras = ["s3"], version = "^3.7.0"}
rich = "^13.4.2"
arviz = "^0.16.1"
pynvml = "^11.5.0"
jax = {extras = ["cuda12-pip"], version = "^0.4.8"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
